--- a/Aplicacion web/SimRend/SimRend/Views/DeclaracionGastos/VerDocumento.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/DeclaracionGastos/VerDocumento.cshtml
@@ -224,7 +224,7 @@
             if (estadoProceso == 4 && estadoFinalProceso == "Abierto")
             {
                 var volver = '<div class="form-group  col-lg-4 col-md-4 col-sm-12"> <button class="btn btn-secondary" id="volverDocumentos" style="width:100%" onclick="volverDocumentos()"><i class="fas fa-arrow-circle-left"></i> Volver</button></div>';
-                var modificar = '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="modal-effect btn btn-warning tx-transform-none" id="modificarDocumento" data-effect="effect-just-me" style="width:100%" onclic="modificarDocumento()"><i class="fas fa-edit"></i> Modificar</button></div>';
+                var modificar = '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="modal-effect btn btn-warning tx-transform-none" id="modificarDocumento" data-effect="effect-just-me" style="width:100%" onclick="modificarDocumento()"><i class="fas fa-edit"></i> Modificar</button></div>';
                 var eliminar = '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="modal-effect btn btn-danger tx-transform-none" id="eliminarDocumento" data-effect="effect-just-me" style="width:100%" onclick="eliminarDocumento()"><i class="fas fa-trash"></i> Eliminar</button></div >';
                 $('#acciones').empty().append(volver);
                 $('#acciones').append(modificar);
