--- a/Aplicacion web/SimRend/SimRend/Views/Usuario/Login.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Usuario/Login.cshtml
@@ -68,6 +68,7 @@
                                 <option value="null" disabled="disabled">Seleccione el tipo de usuario</option>
                                 <option value="Estudiante dirigente">Estudiante dirigente</option>
                                 <option value="Director">Director</option>
+                                <option value="Vicerector">Vicerector</option>
                                 <option value="Administrador">Administrador</option>
                             </select>
                         </div>
